--- a/main.html
+++ b/main.html
@@ -4,10 +4,76 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+		rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+		crossorigin="anonymous">
 </head>
 
-<body>
+<body class="p-4">
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		<h2 class="mb-4">Welcome to Sync5</h2>
+		<div class="card-deck d-flex flex-wrap gap-3">
+			<div class="card flex-fill">
+				<div class="card-header bg-light">
+					New Features
+				</div>
+				<div class="card-body">
+					<h5 class="card-title">Mobile and Tablet support</h5>
+					<p class="card-text">With this new update you will be able to sync your work across large number of platforms.</p>
+					<a href="#" class="btn btn-primary">Read more</a>
+				</div>
+			</div>
+
+			<div class="card flex-fill bg-danger text-white">
+				<div class="card-header">
+					Alert
+				</div>
+				<div class="card-body">
+					<h5 class="card-title">Node Dead</h5>
+					<p class="card-text">Node 5 (east-us) is offline for last 12 days.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="card mt-3">
+			<img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" class="card-img-top" alt="Ocean">
+			<div class="card-body">
+				<h5 class="card-title">President under Pressure</h5>
+				<p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+				<p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
+			</div>
+		</div>
+	</div>
+
+				
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
